# server.js
@@ -1,8 +1,9 @@
 require('dotenv').config();
 const express = require('express');
 const { getSupabaseClient } = require('./src/config/supabase');
-const chatRoutes = require('./src/routes/chat.routes');
-const authRoutes = require('./routes/auth.routes');
+const authRoutes = require('./src/routes/auth.routes');
+const chatRoutes = require('./src/routes/chat.routes'); 
+const documentRoutes = require('./src/routes/document.routes');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./docs/swagger.json');
 
@@ -23,6 +24,7 @@ app.use(express.json());
 // 4. Rutas conectadas
 app.use('/api/v1/chat', chatRoutes);
 app.use('/api/v1/auth', authRoutes);
+app.use('/api/v1/documents', documentRoutes);
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 // 5. Encendemos el motor
